--- a/templates/examples.html
+++ b/templates/examples.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Retrieved Example List</title>
+    <title>HL7 CDA Example Search</title>
 
     <link rel="stylesheet" media="screen" href="/static/css/hl7.css" />
     <script src="/assets/vendor/modernizr-21c79fdbd5c98d918a40c9fa2ec03aa716322b0a8a56159587b83d66b7fbc8a5.js"></script>
