fixed section link on sections page

--- a/templates/sections.html
+++ b/templates/sections.html
@@ -63,7 +63,6 @@
     </fieldset>
 </form>
 
-<p class="large-9 columns" id="query-count"> The query found 75 examples</p>
 <p class="return-link large-3 columns" id="main-page-link"><a href="/sections">return to Main Search</a></p>
 
 <table class="listing">
@@ -83,7 +82,7 @@
             </div>
           </div>
           <div class="large-2 small-3 columns">
-            <a href="/sections/1">
+            <a href="/sections/{{example['_id']}}">
                 <span class="list-link-text">Section examples</span><span class="link-pointer"> }</span>
               </a>
           </div>
