--- a/templates/example.html
+++ b/templates/example.html
@@ -88,10 +88,11 @@
 
               <p>
                 <strong id="example-example">Example:</strong>
-                <a class="button tiny" id="example-download" href="/examples/download/{{example['_id']}}">download example</a>
-                <a target='_blank' class="button tiny" id="example-github" href="https://github.com/HL7/C-CDA-Examples/blob/master/Allergies/Allergy%20to%20cat%20hair/Allergy%20to%20specific%20substance%20cat%20hair(C-CDA2.1).xml">view on GitHub</a>
+                <a class="button tiny" id="example-download" href="/examples/download/{{example['Permalink']}}">download example</a>
+                <a target='_blank' class="button tiny" id="example-github" href="https://github.com/HL7/C-CDA-Examples/blob/master/{{example['section']}}/{{example['name']}}/{{example['xml_filename']}}">view on GitHub</a>
               </p>
 
+    {{xml|safe}}
 
 <ol class="joyride-list" data-joyride>
   <li data-button="Begin Tour" data-text="Next"  data-options="prev_button: false">
