--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -8,10 +8,15 @@
       </div>
       <fieldset class="large-3 small-4 columns push-buttons" id="search-by-status">
         <legend>filter by example status</legend>
-        <input type="checkbox" value="app" name="approval" id="search_status_app" /><label for="search_status_app">Approved</label><input type="checkbox" value="wthd" name="search[status][]" id="search_status_wthd" /><label for="search_status_wthd">Withdrawn</label><input type="checkbox" value="pend" name="search[status][]" id="search_status_pend" /><label for="search_status_pend">Pending</label><input type="hidden" name="search[status][]" value="" />
+        <input type="checkbox" value="Approved" name="approval" id="search_status_app" />
+        <label for="search_status_app">Approved</label>
+        <input type="checkbox" value="Withdrawn" name="approval" id="search_status_wthd" />
+        <label for="search_status_wthd">Withdrawn</label>
+        <input type="checkbox" value="Pending" name="approval" id="search_status_pend" />
+        <label for="search_status_pend">Pending</label>
       </fieldset>
       <fieldset class="large-1 small-2 columns push-buttons" id="search-by-cert">
-        <input name="certification" type="hidden" value="0" /><input type="checkbox" value="1" name="certification" id="search_search_certification" />
+        <input type="checkbox" value="1" name="certification" id="search_search_certification" />
         <label for="search_search_certification">Certification</label>
       </fieldset>
       <div class="large-1 columns send-search">
