fixed last set of errors: formatting on google doc links, missing approval status, and order of examples

--- a/templates/example.html
+++ b/templates/example.html
@@ -78,7 +78,15 @@
               </p>
               <div class="large-10 large-offset-1 columns">
                 <ul>
-              <li>{{example['Comments']}}</li>
+
+
+              <li>
+                {% if example['xml'] != None %}
+                      {{example['Comments']}}
+                {% else %}
+                    {{example['google_sheets_url']|safe}}
+                {% endif %}
+              </li>
               </ul>
 
               </div>
